--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ushvjc');
-  src:  url('fonts/icomoon.eot?ushvjc#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ushvjc') format('truetype'),
-    url('fonts/icomoon.woff?ushvjc') format('woff'),
-    url('fonts/icomoon.svg?ushvjc#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?k3rzev');
+  src:  url('fonts/icomoon.eot?k3rzev#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?k3rzev') format('truetype'),
+    url('fonts/icomoon.woff?k3rzev') format('woff'),
+    url('fonts/icomoon.svg?k3rzev#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,15 +25,42 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-close:before {
-  content: "\e900";
-}
-.icon-menu:before {
-  content: "\e901";
-}
-.icon-moon:before {
+.icon-moon-o:before {
   content: "\e902";
 }
-.icon-sun:before {
+.icon-envelope:before {
+  content: "\e901";
+}
+.icon-keyboard_arrow_up:before {
+  content: "\e900";
+}
+.icon-verified:before {
+  content: "\e905";
+}
+.icon-instagram:before {
+  content: "\e906";
+}
+.icon-menu:before {
   content: "\e903";
+}
+.icon-link:before {
+  content: "\e9cb";
+}
+.icon-sun:before {
+  content: "\e9d4";
+}
+.icon-cross:before {
+  content: "\ea0f";
+}
+.icon-arrow-right2:before {
+  content: "\ea3c";
+}
+.icon-facebook2:before {
+  content: "\ea91";
+}
+.icon-github:before {
+  content: "\eab0";
+}
+.icon-linkedin:before {
+  content: "\eac9";
 }
