--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@ html {
   --title:rgb(244 244 245);
   --subtitle:rgb(161 161 170);
   --bgHeader:rgb(39,39,42);
-  --blue: rgb(93, 188, 252);
+  --orange: #e47d57e0;
+
 }
 .light{
   --primary:#fff;
@@ -57,4 +58,10 @@ button{
   cursor:pointer;}/*eliminer tout les fonts par defaut de buton*/
   button :active{
     scale:0.9;
+  }
+  @media(max-width: 500px){
+    .container{
+      width: 98%;
+      padding:0 1.7rem;
+    }
   }
