--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ html {
   --subtitle:rgb(161 161 170);
   --bgHeader:rgb(39,39,42);
   --orange: #e47d57e0;
+  --icon-hover: #d4d4d8;
+  --container-padding:4.8rem;
 
 }
 .light{
@@ -64,4 +66,5 @@ button{
       width: 98%;
       padding:0 1.7rem;
     }
+
   }
