--- a/src/components/1-header/header.css
+++ b/src/components/1-header/header.css
@@ -24,7 +24,7 @@ header.flex nav {
   background-color: var(--bgHeader);
   padding: 0.77rem 1.6rem;
   border-radius: 55px;
-  box-shadow: 1px 1px 40px #252222;
+  
 }
 
 header .menu {
@@ -51,6 +51,7 @@ header .mode {
   border-radius: 50%;
   color: var(--subtitle);
   border: 1px solid #e47d5772;
+  box-shadow: 1px 1px 40px rgba(0, 0, 0, 0.171) ;
 }
 header .icon-menu:hover,
 header .mode:hover {
@@ -114,6 +115,9 @@ header .fixed ul.modal li:first-child {
 
 header .fixed ul.modal li a {
   font-size: 0.7rem;
+}
+.icon-sun{
+  color: orange;
 }
 
 @media (max-width: 700px) {
