--- a/src/components/4-contact/contact.css
+++ b/src/components/4-contact/contact.css
@@ -46,7 +46,7 @@ section.contactUs #message{
     resize: vertical;
 }
 section.contactUs .submit{
-    background-color: var(--bgHeader);
+    background-color: var(--button);
     
     padding: 0.75rem 1.9rem;
     text-align: center;
