--- a/src/components/4-contact/contact.css
+++ b/src/components/4-contact/contact.css
@@ -61,6 +61,10 @@ section.contactUs .submit:hover{
     scale:0.97;
     color:var(--orange)
 }
+button:disabled{
+    opacity: 0.4;
+    cursor: not-allowed;
+}
 
 @media (max-width:600px) {
     section.contactUs .animation{display: none;}
